--- a/cdb/src/main/webapp/public-web-resources/css/main.css
+++ b/cdb/src/main/webapp/public-web-resources/css/main.css
@@ -27,3 +27,13 @@ input[type='checkbox'] {
     border-radius: 5px;
     white-space: nowrap;
 }
+
+
+.flag {
+	width: 16px;
+	height: 11px;
+	background:url(../fonts/flags.png) no-repeat
+}
+
+.flag.flag-eng {background-position: -16px 0}
+.flag.flag-fr {background-position: 0 -11px}
