--- a/cdb/webapp/src/main/webapp/public-web-resources/css/main.css
+++ b/cdb/webapp/src/main/webapp/public-web-resources/css/main.css
@@ -27,3 +27,38 @@ input[type='checkbox'] {
     border-radius: 5px;
     white-space: nowrap;
 }
+
+.form-signin, .form-signin-button {
+  max-width: 330px;
+  padding: 0px 15px;
+  margin: 0 auto;
+}
+
+.form-signin-button {
+	padding: 15px;
+}
+
+.form-signin .form-control {
+  position: relative;
+  height: auto;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin .up {
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin .down {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.input-group-addon {
+	border = 1px;
+}
